--- a/src/home.html
+++ b/src/home.html
@@ -60,7 +60,7 @@
                                 </div>
                                 <h3 class="item-about__title">Sales growth</h3>
                                 <p class="item-about__text">
-											Identify qualified customers with easy-to-use live chat messaging and AI-based Sales Bot
+                                    Identify qualified customers with easy-to-use live chat messaging and AI-based Sales Bot
                                 </p>
                                 <a href="" class="item-about__button">Learn more</a>
                             </div>
@@ -70,7 +70,7 @@
                                 </div>
                                 <h3 class="item-about__title">Coponents-driven</h3>
                                 <p class="item-about__text">
-											Delivering faster and more personalized support with shared screens and cool design systems for Figma
+                                    Delivering faster and more personalized support with shared screens and cool design systems for Figma
                                 </p>
                                 <a href="" class="item-about__button">Learn more</a>
                             </div>
@@ -83,6 +83,53 @@
                                     Delivering faster and more personalized support with shared screens and cool design systems for Figma
                                 </p>
                                 <a href="" class="item-about__button">Learn more</a>
+                            </div>
+                        </div>
+                    </section>
+                    <section class="price">
+                        <h2 class="price__title">Affordable pricing</h2>
+                        <h3 class="price__subtitle">
+                            Bill me
+                            <span class="price__sp">monthly</span>
+                            yearly
+                        </h3>
+                        <div class="price__items">
+                            <div class="price__item item-price item-price_van">
+                                <h3 class="item-price__title">Student</h3>
+                                <div class="item-price__prices">
+                                    <span>Free</span>
+                                    / forever
+                                </div>
+                                <p class="item-price__text">Components-driven system</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <a href="" class="item-price__button">Try for free</a>
+                            </div>
+                            <div class="price__item item-price item-price_two">
+                                <h3 class="item-price__title">👤 Individual</h3>
+                                <div class="item-price__prices">
+                                    <span>$24</span>
+                                    / month
+                                </div>
+                                <p class="item-price__text">Components-driven system</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <a href="" class="item-price__button">Regular license</a>
+                            </div>
+                            <div class="price__item item-price item-price_three">
+                                <h3 class="item-price__title">👥 Corporate</h3>
+                                <div class="item-price__prices">
+                                    <span>$12</span>
+                                    / editor
+                                </div>
+                                <p class="item-price__text">Components-driven system</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <p class="item-price__text">Sales-boosting landing pages</p>
+                                <a href="" class="item-price__button">extended licence</a>
                             </div>
                         </div>
                     </section>
