--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,97 @@
 <footer class="footer">
-	<div class="footer__container">
-	</div>
+    <div class="footer__container">
+        <div class="footer__info  info-footer">
+            <div class="info-footer__top  top-info">
+                <h2 class=" top-info__title">Follow us</h2>
+                <ul class=" top-info__list">
+                    <li class="top-info__item">
+                        <a href="#">
+                            <img src="@img/icons/ff.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="top-info__item">
+                        <a href="#">
+                            <img src="@img/icons/linkedin.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="top-info__item">
+                        <a href="#">
+                            <img src="@img/icons/slack.svg" alt="">
+                        </a>
+                    </li>
+                    <li class="top-info__item">
+                        <a href="#">
+                            <img src="@img/icons/twitter.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="info-footer__bottom bottom-info ">
+                <h2 class="bottom-info__title">Information</h2>
+                <ul class="bottom-info__items">
+                    <li class="bottom-info__item">
+                        <a class="bottom-info__link" href="#">About Fapster app</a>
+                    </li>
+                    <li class="bottom-info__item">
+                        <a class="bottom-info__link" href="#">Get in Touch</a>
+                    </li>
+                    <li class="bottom-info__item">
+                        <a class="bottom-info__link" href="#">Things We Like</a>
+                    </li>
+                    <li class="bottom-info__item">
+                        <a class="bottom-info__link" href="#">Onhovered / Active</a>
+                    </li>
+                    <li class="bottom-info__item">
+                        <a class="bottom-info__link" href="#">About Fapster app</a>
+                    </li>
+                    <li class="bottom-info__item">
+                        <a class="bottom-info__link" href="#">Get in Touch</a>
+                    </li>
+                    <li class="bottom-info__item">
+                        <a class="bottom-info__link" href="#">Things We Like</a>
+                    </li>
+                    <li class="bottom-info__item">
+                        <a class="bottom-info__link" href="#">Onhovered / Active</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="footer__form form-footer">
+            <div class="form-footer__top top-footer">
+                <h2 class=" top-footer__title ">follow us</h2>
+                <span class=" top-footer__sp">hello@fapsterapp.com</span>
+            </div>
+            <div class="form-footer__bottom  bottom-footer">
+                <h2 class="bottom-footer__title">keep in touch</h2>
+                <form class="form" action="">
+                    <input
+                        autocomplete="off"
+                        type="text"
+                        name="form[]"
+                        data-error="Ошибка"
+                        placeholder="Yuor name"
+                        class="input1"
+                    >
+                    <input
+                        autocomplete="off"
+                        type="text"
+                        name="form[]"
+                        data-error="Ошибка"
+                        placeholder="E-mail"
+                        class="input2"
+								
+                    >
+                    <textarea
+                        class="textarea"
+								placeholder="Leave your message"
+                        name=""
+                        id=""
+                        cols="30"
+                        rows="10"
+                    ></textarea>
+						  <button type="submit" class="button">Send</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </footer>
